--- a/infra/base/addons/argocd-image-updater/application.yaml
+++ b/infra/base/addons/argocd-image-updater/application.yaml
@@ -48,7 +48,7 @@ spec:
             cpu: 50m
             memory: 64Mi           
   destination:
-    server: CLUSTER
+    name: CLUSTER
     namespace: argocd
   syncPolicy:
     automated:
