--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -58,5 +58,6 @@ jobs:
             ghcr.io/justgithubaccount/chat-api:latest
             ghcr.io/justgithubaccount/chat-api:${{ github.sha }}
             ghcr.io/justgithubaccount/chat-api:${{ steps.semantic.outputs.new_release_version }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          # https://github.com/docker/build-push-action/tree/v5/?tab=readme-ov-file#customizing
+          # cache-from: type=gha
+          # cache-to: type=gha,mode=max
