--- a/infra/base/services/agent/chat/application.yaml
+++ b/infra/base/services/agent/chat/application.yaml
@@ -1,6 +1,12 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
+  labels:
+    app.kubernetes.io/name: chat-api
+    app.kubernetes.io/part-of: chat
+    app.kubernetes.io/managed-by: argocd
+    app.kubernetes.io/component: backend
+    env: dev
   name: chat-api
   namespace: argocd
   annotations:
@@ -15,6 +21,11 @@ metadata:
     argocd-image-updater.argoproj.io/write-back-target-branch: main
     argocd-image-updater.argoproj.io/git-commit-user-name: justgithubaccount
     argocd-image-updater.argoproj.io/git-commit-user-email: kulikovyevgeny@outlook.com
+
+    argocd-image-updater.argoproj.io/git-credentialSecret: chat-github 
+
+    # notifications.argoproj.io/subscribe.on-sync-succeeded.slack: chat-devops
+    # notifications.argoproj.io/subscribe.on-sync-failed.slack: chat-devops
 spec:
   project: default
   source:
