--- a/infra/base/services/agent/chat/kustomization.yaml
+++ b/infra/base/services/agent/chat/kustomization.yaml
@@ -1,4 +1,5 @@
 resources:
   - application.yaml
-  - pg-secrets-sealed.yaml
-  - api-secrets-sealed.yaml
+  - postgree-secrets.yaml
+  - openrouter-secrets.yaml
+  - github-secrets.yaml
