--- a/infra/base/addons/cert-manager/kustomization.yaml
+++ b/infra/base/addons/cert-manager/kustomization.yaml
@@ -1,5 +1,5 @@
 resources:
   - application.yaml
-  - secret-cloudflare-cert-manager-sealed.yaml
+  - cloudflare-secrets.yaml
   - cert-cluster.yaml
   - issuer-cluster.yaml
