--- a/infra/base/addons/external-dns/application.yaml
+++ b/infra/base/addons/external-dns/application.yaml
@@ -27,8 +27,8 @@ spec:
           - name: CF_API_TOKEN
             valueFrom:
               secretKeyRef:
-                name: cloudflare-api-token
-                key: api-token
+                name: external-dns-secret
+                key: CLOUDFLARE_TOKEN
   syncPolicy:
     automated:
       selfHeal: true
