sec(env): fix postgree ref name

--- a/charts/chat/values.yaml
+++ b/charts/chat/values.yaml
@@ -71,7 +71,7 @@ externalServices:
 
 # Secrets
 openrouterSecretRefName: "chat-openrouter"
-postgresSecretRefName: "chat-postgres"
+postgresSecretRefName: "chat-postgree"
 
 # PostgreSQL
 postgres:
