test(ci): update argo image annotations

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -13,6 +13,7 @@
           {"type": "style", "release": "patch"},
           {"type": "refactor", "release": "patch"},
           {"type": "test", "release": "patch"},
+          {"type": "tst", "release": "patch"},
           {"type": "ci", "release": "patch"},
           {"type": "chore", "release": "patch"},
           {"breaking": true, "release": "major"}
