--- a/.releaserc.json
+++ b/.releaserc.json
@@ -14,6 +14,7 @@
           {"type": "refactor", "release": "patch"},
           {"type": "test", "release": "patch"},
           {"type": "tst", "release": "patch"},
+          {"type": "tst-ci", "release": "patch"},
           {"type": "ci", "release": "patch"},
           {"type": "chore", "release": "patch"},
           {"breaking": true, "release": "major"}
