tst(ci): debug argocd image updater v5

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -12,8 +12,8 @@
           {"type": "docs", "release": "patch"},
           {"type": "style", "release": "patch"},
           {"type": "refactor", "release": "patch"},
-          {"type": "test", "release": "patch"},
           {"type": "tst", "release": "patch"},
+          {"type": "tst-cd", "release": "patch"},
           {"type": "tst-ci", "release": "patch"},
           {"type": "ci", "release": "patch"},
           {"type": "chore", "release": "patch"},
