--- a/infra/base/services/agent/chat/application.yaml
+++ b/infra/base/services/agent/chat/application.yaml
@@ -10,9 +10,9 @@ metadata:
   name: chat-api
   namespace: argocd
   annotations:
-    argocd.argoproj.io/sync-wave: "6"
-
-    argocd-image-updater.argoproj.io/image-list: chat=ghcr.io/justgithubaccount/chat-api:~1.0
+    argocd.argoproj.io/sync-wave: "5"
+    
+    argocd-image-updater.argoproj.io/image-list: chat=ghcr.io/justgithubaccount/chat-api:^1
     argocd-image-updater.argoproj.io/chat.update-strategy: semver
     argocd-image-updater.argoproj.io/chat.helm.image-tag: image.tag
 
