--- a/infra/clusters/prd/app-of-apps.yaml
+++ b/infra/clusters/prd/app-of-apps.yaml
@@ -1,14 +1,16 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: infra-root
+  name: platform-bootstrap
   namespace: argocd
+  labels:
+    argocd.argoproj.io/instance: platform-bootstrap
 spec:
   project: platform
   source:
     repoURL: https://github.com/justgithubaccount/app-release.git
     targetRevision: main
-    path: infra/bootstrap
+    path: infra/platform/apps/prd
   destination:
     server: https://kubernetes.default.svc
     namespace: argocd
@@ -18,3 +20,4 @@ spec:
       selfHeal: true
     syncOptions:
       - CreateNamespace=true
+      - ServerSideApply=true
