Update Sync Policy

--- a/infra/base/addons/external-dns/application.yaml
+++ b/infra/base/addons/external-dns/application.yaml
@@ -31,7 +31,10 @@ spec:
                 key: CLOUDFLARE_TOKEN
   syncPolicy:
     automated:
+      allowEmpty: true
       selfHeal: true
       prune: true
     syncOptions:
+      - Validate=true
       - CreateNamespace=true
+      - PruneLast=true
