--- a/infra/base/addons/external-secrets/application.yaml
+++ b/infra/base/addons/external-secrets/application.yaml
@@ -19,7 +19,10 @@ spec:
     namespace: external-secrets
   syncPolicy:
     automated:
+      allowEmpty: true
       selfHeal: true
       prune: true
     syncOptions:
+      - Validate=true
       - CreateNamespace=true
+      - PruneLast=true
