--- a/infra/base/addons/longhorn/application.yaml
+++ b/infra/base/addons/longhorn/application.yaml
@@ -20,7 +20,10 @@ spec:
     namespace: longhorn-system
   syncPolicy:
     automated:
+      allowEmpty: true
       selfHeal: true
       prune: true
     syncOptions:
+      - Validate=true
       - CreateNamespace=true
+      - PruneLast=true
