--- a/infra/base/addons/observability/grafana/application.yaml
+++ b/infra/base/addons/observability/grafana/application.yaml
@@ -29,7 +29,10 @@ spec:
     name: CLUSTER
   syncPolicy:
     automated:
+      allowEmpty: true
       selfHeal: true
       prune: true
     syncOptions:
+      - Validate=true
       - CreateNamespace=true
+      - PruneLast=true
