--- a/infra/base/addons/observability/loki/application.yaml
+++ b/infra/base/addons/observability/loki/application.yaml
@@ -99,7 +99,10 @@ spec:
 
   syncPolicy:
     automated:
+      allowEmpty: true
       selfHeal: true
       prune: true
     syncOptions:
+      - Validate=true
       - CreateNamespace=true
+      - PruneLast=true
