--- a/infra/base/addons/cert-manager/application.yaml
+++ b/infra/base/addons/cert-manager/application.yaml
@@ -22,7 +22,10 @@ spec:
           - --dns01-recursive-nameservers=8.8.8.8:53,1.1.1.1:53
   syncPolicy:
     automated:
-      prune: true
+      allowEmpty: true
       selfHeal: true
+      prune: true
     syncOptions:
+      - Validate=true
       - CreateNamespace=true
+      - PruneLast=true
