--- a/infra/base/addons/sealed-secrets/application.yaml
+++ b/infra/base/addons/sealed-secrets/application.yaml
@@ -16,7 +16,10 @@ spec:
     targetRevision: 2.17.3
   syncPolicy:
     automated:
+      allowEmpty: true
       selfHeal: true
       prune: true
     syncOptions:
+      - Validate=true
       - CreateNamespace=true
+      - PruneLast=true
