refactor(infra): remove consul date from infra

--- a/infra/base/addons/cert-manager/cert-cluster.yaml
+++ b/infra/base/addons/cert-manager/cert-cluster.yaml
@@ -11,7 +11,7 @@ spec:
     annotations:
       reflector.v1.k8s.emberstack.com/reflection-allowed: "true"
       reflector.v1.k8s.emberstack.com/reflection-auto-enabled: "true"
-      reflector.v1.k8s.emberstack.com/reflection-allowed-namespaces: "argocd,observability,consul"
+      reflector.v1.k8s.emberstack.com/reflection-allowed-namespaces: "argocd,observability"
   dnsNames:
     - "*.syncjob.ru"
     - syncjob.ru
