infra(app): add application open-webui

--- a/infra/base/addons/open-webui/application.yaml
+++ b/infra/base/addons/open-webui/application.yaml
@@ -27,7 +27,7 @@ spec:
           tls: true
         env:
           - name: OPENAI_API_KEY
-            value: dummy
+            value: 
           - name: OPENAI_API_BASE
             value: http://chat-api.chat-api.svc.cluster.local:8000/v1
         persistence:
