fix(obs): change labels setup v3

--- a/infra/base/addons/observability/vector-gateway/application.yaml
+++ b/infra/base/addons/observability/vector-gateway/application.yaml
@@ -23,6 +23,9 @@ spec:
               port: 4317
         customConfig:
           data_dir: /vector-data
+          api:
+            enabled: true
+            address: 0.0.0.0:8686
           sources:
             otel:
               type: opentelemetry
