fix(obs): change labels setup v4

--- a/infra/base/addons/observability/vector-gateway/application.yaml
+++ b/infra/base/addons/observability/vector-gateway/application.yaml
@@ -21,6 +21,8 @@ spec:
               port: 4318
             - name: otlp-grpc
               port: 4317
+            - name: api
+              port: 8686
         customConfig:
           data_dir: /vector-data
           api:
