fix(obs): change labels setup v6

--- a/infra/base/addons/observability/vector-gateway/application.yaml
+++ b/infra/base/addons/observability/vector-gateway/application.yaml
@@ -43,21 +43,19 @@ spec:
               endpoint: http://loki.observability.svc.cluster.local:3100
               encoding:
                 codec: json
-              labels:
-                service_name: "{{`{{ resources.service.name }}`}}"
-                namespace: "{{`{{ resources.k8s.namespace }}`}}"
-                deployment: "{{`{{ resources.k8s.deployment.name }}`}}"
-                container: "{{`{{ resources.k8s.container.name }}`}}"
-                node: "{{`{{ resources.k8s.node.name }}`}}"
-                env: "{{`{{ resources.deployment.environment }}`}}"
-
+            labels:
+              service_name: "{{ service.name }}"
+              namespace: "{{ k8s.namespace }}"
+              deployment: "{{ k8s.deployment.name }}"
+              container: "{{ k8s.container.name }}"
+              node: "{{ k8s.node.name }}"
+              env: "{{ deployment.environment }}"
             debug:
               type: console
               inputs:
                 - otel.logs
               encoding:
                 codec: json
-
   destination:
     name: CLUSTER
     namespace: observability
