--- a/infra/base/addons/observability/vector-gateway/application.yaml
+++ b/infra/base/addons/observability/vector-gateway/application.yaml
@@ -14,6 +14,7 @@ spec:
     helm:
       values: |
         role: "Stateless-Aggregator"
+
         service:
           enabled: true
           ports:
@@ -23,42 +24,59 @@ spec:
               port: 4317
             - name: api
               port: 8686
+
         customConfig:
           data_dir: /vector-data
-          api:
-            enabled: true
-            address: 0.0.0.0:8686
-          sources:
-            otel:
-              type: opentelemetry
-              http:
-                address: 0.0.0.0:4318
-              grpc:
-                address: 0.0.0.0:4317
-          sinks:
-            loki:
-              type: loki
-              inputs:
-                - otel.logs
-              endpoint: http://loki.observability.svc.cluster.local:3100
-              encoding:
-                codec: json
-              labels:
-                service_name: "{{`{{ service.name }}`}}"
-                namespace: "{{`{{ k8s.namespace }}`}}"
-                deployment: "{{`{{ k8s.deployment.name }}`}}"
-                container: "{{`{{ k8s.container.name }}`}}"
-                node: "{{`{{ k8s.node.name }}`}}"
-                env: "{{`{{ deployment.environment }}`}}"
-            debug:
-              type: console
-              inputs:
-                - otel.logs
-              encoding:
-                codec: json
+
+        api:
+          enabled: true
+          address: 0.0.0.0:8686
+
+        sources:
+          otel:
+            type: opentelemetry
+            http:
+              address: 0.0.0.0:4318
+            grpc:
+              address: 0.0.0.0:4317
+
+        transforms:
+          save_values:
+            type: remap
+            inputs: [otel.logs]
+            source: |
+              .resources = {
+                "service.name": .resources."service.name",
+                "k8s.namespace": .resources."k8s.namespace",
+                "k8s.deployment.name": .resources."k8s.deployment.name",
+                "k8s.container.name": .resources."k8s.container.name",
+                "k8s.node.name": .resources."k8s.node.name",
+                "deployment.environment": "dev"
+              }
+
+        sinks:
+          loki:
+            type: loki
+            inputs:
+              - save_values
+            endpoint: http://loki.observability.svc.cluster.local:3100
+            encoding:
+              codec: json
+            labels:
+              "resources_*": "{{ resources }}"
+              stream: "otel"
+              
+        debug:
+          type: console
+          inputs:
+            - otel.logs
+          encoding:
+            codec: json
+
   destination:
     name: CLUSTER
     namespace: observability
+
   syncPolicy:
     automated:
       allowEmpty: true
