fix(obs): change labels setup v10

--- a/infra/base/addons/observability/vector-gateway/application.yaml
+++ b/infra/base/addons/observability/vector-gateway/application.yaml
@@ -63,7 +63,7 @@ spec:
               encoding:
                 codec: json
               labels:
-                "resources_*": "{{ resources }}"
+                "resources_*": "{{`{{ resources }}`}}"
                 stream: "otel"
               
           debug:
