infra(app): add application linkerd-control-plane

--- a/infra/clusters/dev/kustomization.yaml
+++ b/infra/clusters/dev/kustomization.yaml
@@ -17,7 +17,7 @@ resources:
   - ../../base/addons/observability/vector-gateway
   - ../../base/addons/argocd-image-updater
   - ../../base/addons/open-webui
-
+  - ../../base/addons/linkerd
 patches:
   # Override .spec.destination.name
   - path: destination.yaml
