refactor(ci): change release setup v1

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,10 +2,10 @@ name: Build and Release
 on:
   push:
     branches: [main]
-    paths:
-      - 'apps/chat/**'
-      - '.github/workflows/release.yaml'
-      - '.releaserc.json'
+    # paths:
+    #   - 'apps/chat/**'
+    #   - '.github/workflows/release.yaml'
+    #   - '.releaserc.json'
 
 jobs:
   build-and-release:
